# Validata

./: README.md  pyproject.toml
test/: test_base.py  test_dump_load.py
test/test_benchmark/: test_pydantic.py
test/test_codebase/: test_dump_load.py
validata/: __init__.py  validata.py
vlidt/: __init__.py  abc.py  base.py  lump.py  utils.py  validation.py
